--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -78,6 +78,7 @@
       </div>
     </div>
     <div class="ui inverted section divider"></div>
+    <a href="http://beian.miit.gov.cn/" target="_blank">皖ICP备2021011204号</a>
     <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2021 </p>
   </div>
 
